--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,12 @@
-body {
-    margin: 10px;
+article first-of-type {
+    font-size: 140%
+    font-style: italic;
 }
 
-p {
-    color: orange;
+article last-of-type {
+    font-weight: bold;
 }
 
-.product {
-
-}
-
-a[href^="https"] 
-{
-    color: orange;
+ul li:nth-child(odd) {
+    color: deeppink
 }
