--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,21 @@ body {
     margin: 10px;
 }
 
-.first-letter {
+p::first-letter {
     font-size: 140%;
-    font-weight: bold
+    font-weight: bold;
+}
+
+
+p::first-line {
+    font-weight: bold;
+}
+
+::selection {
+    background-color: pink;
+}
+
+p::before {
+    content: "...";
+    display: block;
 }
